fixed emu being covered by iPhone and overflow of image under footer

--- a/public/css/emu_landing_page_d.css
+++ b/public/css/emu_landing_page_d.css
@@ -11,15 +11,8 @@ html {
 }
 
 body{
-    padding-top: 40px;  If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! 
-    padding-bottom: 50px;
-    text-align: center;
-    color: #f8f8f8;
-    background: url("/resources/emu/bannerBG_overlay.jpg") no-repeat center center;
-    background-size: cover;
-    background-position: top;
+    padding-top: 50px;
 }
-
 
 body,
 h1,
@@ -85,7 +78,13 @@ li > a {
 }
 
 .intro-header {
-    padding-top: 35px;
+    padding-top: 50px;  If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! 
+    padding-bottom: 50px;
+    text-align: center;
+    color: #f8f8f8;
+    background: url("/resources/emu/bannerBG_overlay.jpg") no-repeat center center;
+    background-size: cover;
+    background-position: top;
 }
 
 .intro-message {
